# decky-gallery

./: Cargo.toml  README.md  decky-gallery.service
src/: main.rs
templates/: index.html
